feat(manager): implement cloud dictionary and theme support
- Add cloud sync service for remote dictionaries
- Support theme dictionary extraction and management
- Refactor Dictionary Manager UI with tabbed view
- Add Metadata Editor for dictionary details
- Improve UI localization (tabs, badges, search placeholders)
- Update API and type definitions
- Add technical whitepaper documentation

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"deploy": "npm run build && node scripts/deploy.mjs",
 		"lint": "node scripts/lint-wrapper.mjs",
 		"lint:fix": "node scripts/lint-wrapper.mjs --fix",
-		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"version": "node scripts/update-version.mjs",
 		"upgrade": "node scripts/upgrade.mjs"
 	},
 	"author": "",
